[package]
name = "bench_capn"
version = "0.1.0"
edition = "2021"

[dependencies]
capnp = "0.19.6"
capnp-rpc = "0.19.1"
tokio-util = { version = "0.7.11", features = ["compat"] }
futures = "0.3.0"
nix = { version = "0.29.0", features = ["sched"] }
tokio = { version = "1.37.0", features = ["full"] }

[build-dependencies]
capnpc = "0.19.0"
